# syncfox

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
landing/: index.html
migrations/: 001_init.sql  002_drive_watermark.sql  003_icloud_fingerprint.sql  004_app_settings.sql
src/cloud_sync/: __init__.py  config.py  main.py
src/cloud_sync/persistence/: db.py  repos.py
src/cloud_sync/providers/: __init__.py  dropbox.py  expiry.py  google.py  google_changes.py  icloud.py
src/cloud_sync/routes/: dropbox_setup.py  health.py  icloud_setup.py  index.py  pairs.py  remotes.py  setup.py
src/cloud_sync/static/: _layout.html  dropbox_form.html  google_form.html  icloud_2fa.html  icloud_form.html  index.html  pair_detail.html  pair_new.html  pairs.html  remotes.html  setup.html
src/cloud_sync/sync/: conf_writer.py  encryption.py  fingerprint.py  nudges.py  rclone.py  vaultwarden.py  watchers.py
tests/unit/: test_db_migrations.py  test_phase1_expiry.py  test_phase4_encryption.py  test_phase5_dropbox.py
